[gd_scene load_steps=2 format=3 uid="uid://d3vm2l5qyg2kl"]

[ext_resource type="Script" path="res://Scripts/UI/Shop.gd" id="1_shop"]

[node name="Shop" type="CanvasLayer" groups=["shop"]]
process_mode = 3
script = ExtResource("1_shop")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -225.0
offset_right = 200.0
offset_bottom = 225.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "UPGRADE SHOP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CoinsLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Coins: 0"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="UpgradesContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="AttackUpgrade" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/UpgradesContainer"]
layout_mode = 2

[node name="UpgradeLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/UpgradesContainer/AttackUpgrade"]
layout_mode = 2
size_flags_horizontal = 3
text = "Attack Damage (+5) - Cost: 50"
vertical_alignment = 1

[node name="BuyButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/UpgradesContainer/AttackUpgrade"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "BUY"

[node name="HPUpgrade" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/UpgradesContainer"]
layout_mode = 2

[node name="UpgradeLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/UpgradesContainer/HPUpgrade"]
layout_mode = 2
size_flags_horizontal = 3
text = "Max Health (+20) - Cost: 75"
vertical_alignment = 1

[node name="BuyButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/UpgradesContainer/HPUpgrade"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "BUY"

[node name="SpeedUpgrade" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/UpgradesContainer"]
layout_mode = 2

[node name="UpgradeLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/UpgradesContainer/SpeedUpgrade"]
layout_mode = 2
size_flags_horizontal = 3
text = "Movement Speed (+30) - Cost: 60"
vertical_alignment = 1

[node name="BuyButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/UpgradesContainer/SpeedUpgrade"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "BUY"

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "CLOSE"
